Fixed overflowing in some sections. Added README.md.

--- a/css/sections/popular.css
+++ b/css/sections/popular.css
@@ -10,8 +10,6 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
-
-  overflow: hidden;
 }
 
 .popular-foods__title {
